--- a/index.html
+++ b/index.html
@@ -7,77 +7,126 @@
     <title>Pushkar Jawale - AI & Full Stack Developer</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            background-color: #f9f9f9;
             color: #333;
         }
 
         header {
-            background-color: #4caf50;
+            background-color: #007bff;
             color: #fff;
-            padding: 10px 20px;
+            padding: 20px;
             text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+
+        header p {
+            margin: 0;
+            font-size: 1.2em;
         }
 
         .container {
             padding: 20px;
-            max-width: 800px;
+            max-width: 900px;
             margin: 0 auto;
         }
 
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 10px;
+        .section {
+            margin-bottom: 40px;
         }
 
-        p {
-            line-height: 1.6;
-            font-size: 1.2em;
+        .section h2 {
+            font-size: 2em;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
         }
 
-        ul {
-            list-style-type: none;
-            padding: 0;
+        .skills-list {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
         }
 
-        li {
-            background-color: #e0e0e0;
-            margin: 5px 0;
-            padding: 10px;
+        .skills-list li {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px 20px;
             border-radius: 5px;
+            font-size: 1em;
+        }
+
+        footer {
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Pushkar Jawale (He/Him)</h1>
-        <p>Artificial Intelligence (AI) | Machine Learning (ML) Engineer | Full Stack Developer | DevOps Engineer</p>
+        <h1>Pushkar Jawale</h1>
+        <p>(He/Him) | Artificial Intelligence (AI) | Machine Learning (ML) Engineer | Full Stack Developer | DevOps Engineer</p>
     </header>
 
     <div class="container">
-        <h2>About Me</h2>
-        <p>
-            I am an experienced AI and ML engineer with a background in full-stack development and DevOps. I specialize in building and deploying scalable applications using modern technologies.
-        </p>
+        <div class="section" id="about">
+            <h2>About Me</h2>
+            <p>
+                I am an experienced AI and ML engineer with a strong background in full-stack development and DevOps.
+                My expertise includes building and deploying scalable applications with modern technologies and
+                ensuring high-performance and reliability.
+            </p>
+        </div>
 
-        <h2>Skills</h2>
-        <ul>
-            <li>Java Spring Boot</li>
-            <li>React JS</li>
-            <li>SQL</li>
-            <li>AWS</li>
-            <li>Jenkins</li>
-            <li>GitHub Actions</li>
-            <li>Docker</li>
-            <li>Kubernetes</li>
-        </ul>
+        <div class="section" id="skills">
+            <h2>Skills</h2>
+            <ul class="skills-list">
+                <li>Java Spring Boot</li>
+                <li>React JS</li>
+                <li>SQL</li>
+                <li>AWS</li>
+                <li>Jenkins</li>
+                <li>GitHub Actions</li>
+                <li>Docker</li>
+                <li>Kubernetes</li>
+            </ul>
+        </div>
 
-        <h2>Contact</h2>
-        <p>You can reach me via email at <a href="mailto:pushkar@example.com">pushkar@example.com</a></p>
+        <div class="section" id="contact">
+            <h2>Contact</h2>
+            <p>
+                Feel free to reach out to me at <a href="mailto:pushkar@example.com">pushkar@example.com</a> for
+                collaborations or opportunities.
+            </p>
+        </div>
     </div>
+
+    <footer>
+        <p>&copy; 2024 Pushkar Jawale. All rights reserved. | <a href="https://github.com/pushkarjawale" target="_blank">GitHub</a></p>
+    </footer>
 </body>
 
 </html>
